# indri-pruning-toolkit

./: .gitignore  Licence.md  Makefile.in  README.md  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
share/: DocListMemoryBuilder.patch
src/: BinnedFilter.h  DocumentCentricTermScoreFunction.h  FilteredIndex.h  GainFunction.h  IndriPruneIndex.cpp  IndriPruneIndex.h  Makefile.am  Makefile.in  QuantileSampler.h  RunningStat.h  diagnosis.cpp  utils.cpp
test/: Makefile.am  Makefile.in  test-dummy.cpp
